tests/bits-param/missing-param-value.stderr
error: expected `=`
 --> tests/bits-param/missing-param-value.rs:3:1
  |
3 | #[bitfield(bits)]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
